# awr

./: .gitignore  Cargo.toml  pyproject.toml
python/awr/: __init__.py  awr.pyi  callback.py
python/awr/message/: elements.py
src/: lib.rs  login.rs
src/events/: convert.rs  helper.rs  mod.rs  structs.rs
src/message/: elements.rs
