[project]
name = "awr"
version = "0.1.0"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Natural Language :: Chinese (Simplified)",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Communications",
]

dependencies = [
    "loguru~=0.6.0",
    "graia-broadcast>=0.19.0",
    "creart-graia>=0.1.5",
]
[project.optional-dependencies]
kayaku = [
    "kayaku>=0.5.0",
]


[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=22.10.0",
    "isort>=5.10.1",
]
